# rag_gpt

./: README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/src/: config.py  logger.py  main.py  models.py  utils.py
backend/src/api/: chatbot.py  sidebar.py  vector_db.py
backend/src/database/: Qudrant_client.py  Qudrant_connection.py  db.py
backend/src/llm/: chatbot_graph.py  qdrant_retriever.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/actions/: chatActions.ts  threadActions.ts  vectorActions.ts
frontend/src/components/: App.tsx  ChatBot.tsx
frontend/src/components/LeftSideBar/: LeftSidebar.tsx  LeftSidebarActions.tsx  LeftSidebarContent.tsx  LeftSidebarHeader.tsx
frontend/src/components/RightSideBar/: MarkdownConverter.tsx  RightSidebar.tsx  RightSidebarActions.tsx  RightSidebarHeader.tsx  RightSidebarInfo.tsx
frontend/src/pages/: _app.tsx
frontend/src/styles/: globals.css
